Kubernetes/zadania/Todos/deploy-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
      - name: azurecr
      containers:
      - name: web
        image: dawidsages.azurecr.io/pskwarna-todos-web:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 5
