Kubernetes/zadania/Todos/ingress-selfssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todos-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: nginx
  rules:
  - host: dawidapp.mooo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todos-fe
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todos-api
            port:
              number: 3001
  tls:
      - hosts:
        - dawidapp.mooo.com
        secretName: dawidapp.mooo.com
