Kubernetes/zadania/Todos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todos-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: dawidapp.mooo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todos-fe
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todos-api
            port:
              number: 3001
